# gigachadscooter

./: .gitignore  CMakeLists.txt  comm.c  log.h  mema.c  mema.h  util.h
assets/icons/: blinker.png~
assets/images/: gigachadguy.png-autosave.kra
assets/ui/: main_ui.xml
board/raspberrypi/raspberrypi0w/: gigachadscooter.config
board/raspberrypi0w/: chad_stamp.ppm  config.sh  config.txt  gigachadscooter.config  remove_inits.sh
board/raspberrypi0w/rootfs_overlay/etc/: inittab
board/raspberrypi0w/rootfs_overlay/etc/network/: interfaces
board/raspberrypi0w/rootfs_overlay/ui/: gcui
cmake/: utilities.cmake
gcui/: CMakeLists.txt  gcui.c  geometry.h  graphics.c  graphics.h  intro.c  log.c  test_socket.sh  util.h
gcui/cmake/: toolchain.cmake
gcui/opengl/: graphics.c  shader.c  shader.h
gcui/sdl/: graphics.c
gcui/visuals/: battery.c  blinkers.c  commons.h  speedometer.c  temperature.c  time.c  visual.h
gcwm/: CMakeLists.txt  atoms.c  atoms.h  comm.h  gcwm.c  mema.c  wm.c  wm.h  xerror.c  xerror.h
ngcui/: CMakeLists.txt  logger.h  mema.c  mema.h  ngcui.c  utilities.h
scripts/: makestamp.sh  test_socket.sh
source/: main.cpp  ui.cpp
source/views/: ui.hpp
